use match start block to get initial seed
