# api/src/controllers/lobbyState.ts
@@ -1,8 +1,8 @@
 import { Controller, Get, Query, Route } from 'tsoa';
 import { getLobbyById, getLobbyPlayers, requirePool } from '@dice/db';
 import { isLobbyActive, type LobbyPlayer, type LobbyState } from '@dice/utils';
+import { getMatch, getRound } from '@dice/db/src/select.queries';
 import { getBlockHeight } from 'paima-sdk/paima-db';
-import { getRound } from '@dice/db/src/select.queries';
 
 interface Response {
   // TODO: returns null if inactive, inactive lobby can be useful too
@@ -23,21 +23,36 @@ export class LobbyStatecontroller extends Controller {
     // TODO: returns null if inactive, inactive lobby can be useful too
     if (!isLobbyActive(lobby)) return { lobby: null };
 
-    // null if this is first round
-    const [last_round_data] = await getRound.run(
+    const [match] = await getMatch.run(
       {
         lobby_id: lobbyID,
         match_within_lobby: lobby.current_match,
-        round_within_match: lobby.current_round - 1,
       },
       pool
     );
 
-    const [last_block_height] =
-      last_round_data == null
+    const [last_round_data] =
+      lobby.current_round === 0
         ? [undefined]
-        : await getBlockHeight.run({ block_height: last_round_data.execution_block_height }, pool);
-    const round_seed = last_block_height?.seed ?? lobby.initial_random_seed;
+        : await getRound.run(
+            {
+              lobby_id: lobbyID,
+              match_within_lobby: lobby.current_match,
+              round_within_match: lobby.current_round - 1,
+            },
+            pool
+          );
+
+    const seedBlockHeight =
+      lobby.current_round === 0
+        ? match.starting_block_height
+        : last_round_data?.execution_block_height;
+
+    if (seedBlockHeight == null) {
+      return { lobby: null };
+    }
+    const [seedBlockRow] = await getBlockHeight.run({ block_height: seedBlockHeight }, pool);
+    const roundSeed = seedBlockRow.seed;
 
     const players: LobbyPlayer[] = rawPlayers.map(raw => ({
       nftId: raw.nft_id,
@@ -49,7 +64,7 @@ export class LobbyStatecontroller extends Controller {
     return {
       lobby: {
         ...lobby,
-        round_seed,
+        roundSeed,
         players,
       },
     };
